fix: text input not showing eye adornment for inputs of type 'password' (#68)

--- a/src/components/text-input/TextInput.css
+++ b/src/components/text-input/TextInput.css
@@ -57,7 +57,10 @@
 
         & input {
             width: 100%;
-            border-color: transparent;
+
+            &.noBorderBottom {
+                border-color: transparent;
+            }
 
             &:focus + .strengthIndicator > div {
                 background-color: color(var(--color-armadillo) alpha(0.6));
